--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <h1>Welcome to My QR Code Website</h1>
-    <img src="frame1.png" alt="Scan QR Code" width="200">
-    <script src="script.js"></script>
+    <img src="frame.png" alt="Frame Image" width="200">
 </body>
 </html>
