--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="qr.css">
-    <script src="admin.js" defer></script> <!-- Linking to the external JS file -->
+    <a href="admin-login.html">Go to About Page</a>
+    <script src="admin-login.js" defer></script> 
     <title>QR Code Feedback</title>
 </head>
 <body>
