--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     < <link rel="stylesheet" href="qr.css">
-    <script src="admin-login.js" defer></script> 
+    <script src="script.js" defer></script> 
     <title>QR Code Feedback</title>
 </head>
 <body>
