--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -26,7 +26,7 @@
 
     <script src="admin-dashboard.js" defer></script>
     <script src="back-admin-dashboard.js" defer></script>
-    <script src="front=admin-dashboard.js" defer></script>
+    <script src="front-admin-dashboard.js" defer></script>
     <script src="server.js" defer></script>
 </body>
 </html>
