--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -23,6 +23,9 @@
             </tbody>
         </table>
     </div>
-
+    <script src="admin-dashboard.js" defer></script>
+    <script src="back-admin-dashboard.js" defer></script>
+    <script src="front-admin-dashboard.js" defer></script>
+    <script src="server.js" defer></script>
 </body>
 </html>
