--- a/admin-login.html
+++ b/admin-login.html
@@ -26,7 +26,7 @@
                 const password = document.getElementById("password").value.trim();
 
                 // ✅ Updated email and password
-                if (email === "123" && password === "1123456") {
+                if (email === "123" && password === "123456") {
                     alert("Login Successful!");
                     <a href="admin-dashboard.html">Go to About Page</a>
                 } else {
