--- a/admin-login.html
+++ b/admin-login.html
@@ -28,7 +28,7 @@
                 // ✅ Updated email and password
                 if (email === "123" && password === "123456") {
                     alert("Login Successful!");
-                    <a href="admin-dashboard.html">Go to About Page</a>
+                    window.location.href = "admin-dashboard.html"; 
                 } else {
                     alert("Invalid email or password!");
                 }
