--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h1>Business Anonymous Report System</h1>
 
         <div class="welcome-message">
-            <h2>Hey there! 😊</h2>
-            <p>Thanks for stopping by — it means a lot! You've just entered a safe, anonymous space where you can share your thoughts freely.</p>
-            <p>Whether it's about our <strong>service</strong>, <strong>staff</strong>, or <strong>food</strong>, we’re all ears. Your feedback helps us grow and take better care of our awesome customers — like you!</p>
-            <p>No names, no tracking. Just your honest thoughts. 💌</p>
-            <p>We’re listening. We’re learning. Thanks for helping us do better. 💚</p>
+            <h2>Hi there! 😊</h2>
+            <p>Thanks for stopping by — it means a lot to us! You've just entered a safe and anonymous space where you can share your thoughts freely. 
+            Whether it's about our <strong>Service</strong>, <strong>Staff</strong> or <strong>Food</strong>, we’re all ears. Your feedback helps us grow and take better care of our awesome customers — like you!
+            No names, no Identifications are needed. Just your honest thoughts. We’re listening and We’re still learning.</p>
+            <p style="margin-top: 1em; text-align: center;"><strong>Thank you for helping us do better. 💚</strong></p>
+
         </div>
 
         <form id="feedbackForm">
             <fieldset class="rating-section">
                 <legend>Rate Us</legend>
 
-                <!-- Service -->
                 <label for="serviceRating">How's our service?</label>
                 <select id="serviceRating" name="serviceRating" required>
                     <option value="" disabled selected hidden>Select rating</option>
@@ -38,7 +38,6 @@
                     <option value="5">5 - Excellent</option>
                 </select>
 
-                <!-- Staff -->
                 <label for="staffRating">How about our staff?</label>
                 <select id="staffRating" name="staffRating" required>
                     <option value="" disabled selected hidden>Select response</option>
@@ -49,7 +48,6 @@
                     <option value="5">5 - Absolutely amazing service!</option>
                 </select>
 
-                <!-- Food -->
                 <label for="foodRating">What about our food?</label>
                 <select id="foodRating" name="foodRating" required>
                     <option value="" disabled selected hidden>Select response</option>
@@ -61,7 +59,7 @@
                 </select>
             </fieldset>
 
-            <label for="feedbackInput">Details</label>
+           
             <textarea
                 id="feedbackInput"
                 name="feedbackInput"
@@ -71,6 +69,7 @@
 
             <button type="submit" id="submitButton">Submit</button>
             <label id="thankYouMessage" style="display: none;">🌟 Thank you for your feedback!</label>
+            <button type="button" id="newFeedbackButton" style="display: none;">Submit Another Feedback</button>
         </form>
     </div>
 </body>
